--- a/iucr.bib
+++ b/iucr.bib
@@ -259,3 +259,16 @@ keywords = {hybrid method, beamline design, X-ray optics simulation, ray-tracing
   doi = {10.1117/12.2274263},
   URL = {http://doi.org/10.1117/12.2274263}
 }
+
+@article{hierarchical,
+author = "Sanchez del Rio, Manuel and Celestre, Rafael and Glass, Mark and Pirro, Giovanni and Herrera, Juan Reyes and Barrett, Ray and da Silva, Julio Cesar and Cloetens, Peter and Shi, Xianbo and Rebuffi, Luca",
+title = "{A hierarchical approach for modeling X-ray beamlines: application to a coherent beamline}",
+journal = "Journal of Synchrotron Radiation",
+year = "2019",
+volume = "26",
+number = "6",
+pages = "1887--1901",
+month = "Nov",
+doi = {10.1107/S160057751901213X},
+url = {https://doi.org/10.1107/S160057751901213X},
+}
