Updates from Overleaf

--- a/template.tex
+++ b/template.tex
@@ -615,10 +615,13 @@ We have simulated the cases shown in Table~\ref{table:2Dusercases} using SRW-ME,
 The agreement between the results of SRW (Fig.~\ref{fig:srw}) with Wofry1D (Fig.~\ref{fig:2DWofry1D}) is striking. All intensity distributions reproduce exactly the same features, and the FWHM values are coincident within \inred{XX \%}. This results validates, once more, the 1D CDM method proposed here whose requirements in computer power are extremely low, and can be run in an averaged laptop.  
 
 \subsection{2D Model hybrid ray-tracing}
-When analysing optical systems dealing with beams with high coherence, thus originating diffraction effects, the use of pure ray tracing methods (based in geometrical optics) are not adequate. Indeed, as mentioned before, conventional ray tracing does not reproduce the effects of focal position shift and focus degradation when the NA is reduced. However, ray tracing-based methods much simple and fast than wave-optics-based methods, and in many occasions they are very useful to evaluate the impact of the beam coherence when studing a synchrotron beamline. For that, a hybrid  \cite{codeHYBRID} algorithm incorporating coherent concepts in the ray tracing code SHADOW \cite{codeSHADOW} has been developed. It has been fully   integrated in the ShadowOUI \cite{codeSHADOWOUI} add-on in OASYS. It has been demonstrated to be an efficient tool to design beamlines also including coherence effects. We have used the Hybrid method to analyse our cased defined in Table~\ref{table:2Dusercases}, and the results are shown in Fig.~\ref{fig:hybrid}.  
+The use of pure ray tracing methods (based in geometrical optics) is not adequate when analyzing optical systems dealing with coherent beams (originating diffraction effects). Indeed, as mentioned before, conventional ray tracing does not reproduce the effects of focal position shift and focus degradation when the NA is reduced. However, ray tracing-based methods much simple and fast than wave-optics-based methods, and in many occasions they are very useful to evaluate the impact of the beam coherence when studying a synchrotron beamline. For that, a hybrid  \cite{codeHYBRID} algorithm incorporating coherent concepts in the ray tracing code SHADOW \cite{codeSHADOW} has been developed. It has been fully   integrated in the ShadowOUI \cite{codeSHADOWOUI} add-on in OASYS. It has been demonstrated to be an efficient and fast tool to design beamlines also including coherence effects. We have used the Hybrid method to analyse our cased defined in Table~\ref{table:2Dusercases}, and the results are shown in Fig.~\ref{fig:hybrid}.  We observe in these results that the intensity distributions are no so rich, in the sense that  features obtained with full wave-optics methods (like the three-lobe plateau in case 4v) are not reproduced. However, values of FWHM are close to full wave-optics calculations for most cases, with the exception of two particular cases:
+1h (hybrid \SI{16.5}{\micro\meter} Wofry1D \SI{8.5}{\micro\meter}),
+2v (\SI{71.2}{\micro\meter} Wofry1D \SI{32.4}{\micro\meter}). 
+% and 4v (\SI{141}{\micro\meter} Wofry1D \SI{138}{\micro\meter}).
+We observe that these thee cases have in common that the $f_1$ in use value is close to $f1_1$~=\SI{40}{\meter} that corresponds to the singularity in the analytical (geometrical optics) calculations, when the lens one focuses on lens 2. A detailed study with hybrid was performed to calculate the FWHM for all possible values of $f_1$ (as done in Fig.~\ref{fig:focalSizes}. The result, presented in Fig.~\ref{fig:focalSizes_hybrid} of Appendix~\ref{appendix:hybrid} confirms that there is good agreement everywhere except in the region close to $f1_1$~=\SI{40}{\micro\meter}. This discrepancy can be originated by \todo{think about that...}.
 
-
-% In the case of hybrid ray-tracing, results are shown in Table~\ref{table:2Dhybridshadow}. 
+We can conclude that the hybrid ray tracing is a valid method to obtain good values of focal sizes in most cases, excepts for the case that lens 1 focus is close to the position of lens 2 ($f_1 \approx $~\SI{40}{\meter}). The hybrid ray tracing reproduces correctly the change in size when changing the $(f_1,f_2)$ pairs (Fig.~\ref{fig:focalSizes_hybrid}). However, we found some differences in the shape of the some intensity profiles, with less marked diffraction fringes, thus manifesting less correct treatment of the fringes evolution. 
 
 \newpage
 
